<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_dashboard" />
    
    <item
        android:id="@+id/nav_new_sale"
        android:icon="@drawable/ic_add"
        android:title="@string/nav_new_sale" />
    
    <item
        android:id="@+id/nav_view_sales"
        android:icon="@drawable/ic_list"
        android:title="@string/nav_view_sales" />
    
    <item
        android:id="@+id/nav_reports"
        android:icon="@drawable/ic_chart"
        android:title="@string/nav_reports" />
    
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>
